<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="horizontal">
        <Button
            android:id="@+id/b7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="7"
            android:textSize="@dimen/size_text"
            android:text="7" />
        <Button
            android:id="@+id/b8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="8"
            android:textSize="@dimen/size_text"
            android:text="8" />
        <Button
            android:id="@+id/b9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="9"
            android:textSize="@dimen/size_text"
            android:text="9" />
        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="/"
            android:textSize="@dimen/size_text"
            android:text="/" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="horizontal">
        <Button
            android:id="@+id/b4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="4"
            android:textSize="@dimen/size_text"
            android:text="4" />
        <Button
            android:id="@+id/b5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="5"
            android:textSize="@dimen/size_text"
            android:text="5" />
        <Button
            android:id="@+id/b6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="6"
            android:textSize="@dimen/size_text"
            android:text="6" />
        <Button
            android:id="@+id/mult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="X"
            android:textSize="@dimen/size_text"
            android:text="X" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="horizontal">
        <Button
            android:id="@+id/b3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="3"
            android:textSize="@dimen/size_text"
            android:text="3" />
        <Button
            android:id="@+id/b2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="2"
            android:textSize="@dimen/size_text"
            android:text="2" />
        <Button
            android:id="@+id/b1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="1"
            android:textSize="@dimen/size_text"
            android:text="1" />
        <Button
            android:id="@+id/min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="-"
            android:textSize="@dimen/size_text"
            android:text="-" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="horizontal">
        <Button
            android:id="@+id/b0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:tag="0"
            android:textSize="@dimen/size_text"
            android:text="0" />
        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="."
            android:textSize="@dimen/size_text"
            android:text="." />
        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="+"
            android:textSize="@dimen/size_text"
            android:text="+" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="horizontal">
        <Button
            android:id="@+id/eq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="@dimen/size_text"
            android:text="=" />

    </LinearLayout>
</LinearLayout>