<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/calcul_text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text"
                android:textAlignment="textEnd"
                android:gravity="center"
                android:paddingRight="12dp"
                android:text="0" />

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/size_text"
                android:tag="c"
                android:text="c" />
        </LinearLayout>



        <fragment
            android:name="com.example.nico.calculator.SimpleFragment"
            android:id="@+id/simpleFragment"
            android:layout_weight="5"
            android:layout_width="match_parent"
            tools:layout="@layout/fragment_simple"
            android:layout_height="0dp"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="220dp"
        android:background="@color/black"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">

        <Button
            android:id="@+id/black"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="@dimen/size_text"
            android:text="black theme" />

        <Button
            android:id="@+id/blue"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="@dimen/size_text"
            android:text="blue theme" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>